--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^3.4.0",
     "uuid": "^13.0.0"
   },
